# teoria-computacao-artigo-emulador

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  flake.nix  lab-monitor.cabal
.github/workflows/: ci.yml
Exec/: batch.sh  monitor.sh
Exec_Git/: init.git.sh  sync.git.sh
Files/Smoke/: smoke_formato_estendido.txt
Files/Traces/: trace_01_aceita_simples.txt  trace_02_aceita_multiplas.txt  trace_03_viola_a1_inicio.txt  trace_04_viola_a1_apos_leave.txt  trace_05_aceita_vazio.txt  trace_06_aceita_braco1_mix.txt  trace_07_aceita_braco2_uniforme.txt  trace_08_viola_a3_molde_vazio.txt  trace_08_viola_a4_molde_vazio.txt  trace_09_viola_a3_op_errada.txt  trace_09_viola_a4_op_errada.txt  trace_10_refugo_peca_defeituosa.txt  trace_11_janela_longa.txt  trace_12_agente_morto.txt  trace_13_viola_a4_deriva_cnn.txt  trace_14_viola_a2_classificacao_atrasada.txt  trace_15_viola_a4_escalacao_atrasada.txt
Files/Traces/_pending/: trace_10_refugo_peca_defeituosa.txt  trace_11_janela_longa.txt  trace_12_agente_morto.txt
app/: Main.hs
docs/: ARQUITETURA.md  CENARIOS.md  REFERENCIAS.md
src/: Main.hs
src/Monitor/: Composed.hs  Header.hs  MesBridge.hs  Multiset.hs  Parser.hs  Types.hs
src/Monitor/Automata/: A1.hs  A2.hs  A3.hs  A4.hs  A6.hs  A7.hs  A8.hs
src/Output/: Detailed.hs  Json.hs  Plain.hs
test/: AbsorbingProps.hs  CompositionProps.hs  ExampleTraces.hs  Spec.hs
