cabal-version:      3.0
name:               lab-monitor
version:            0.1.0.0
synopsis:           Monitor LTL/TLTL para verificação em tempo de execução
                    de propriedades operacionais de um agente de visão
                    computacional em manufatura
author:             Flávio Miozzi Batista
maintainer:         fmiozzi@gmail.com
build-type:         Simple

executable lab-monitor
    main-is:          Main.hs
    hs-source-dirs:   src
    build-depends:
        base          >= 4.17 && < 5,
        text          >= 2.0
    default-language: Haskell2010
    ghc-options:      -Wall -Wincomplete-patterns -Wincomplete-uni-patterns
