cabal-version:      3.0
name:               lab-monitor
version:            0.6.0.0
synopsis:           Monitor LTL/TLTL para verificação em tempo de execução
                    de propriedades operacionais de um agente de visão
                    computacional em manufatura
author:             Flávio Miozzi Batista
maintainer:         fmiozzi@gmail.com
build-type:         Simple

common warnings
    ghc-options:    -Wall -Wincomplete-patterns -Wincomplete-uni-patterns
    default-language: Haskell2010

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:
        Monitor.Types
      , Monitor.Parser
      , Monitor.Header
      , Monitor.Multiset
      , Monitor.MesBridge
      , Monitor.Automata.A1
      , Monitor.Automata.A2
      , Monitor.Automata.A3
      , Monitor.Automata.A4
      , Monitor.Composed
      , Output.Plain
      , Output.Detailed
      , Output.Json
    build-depends:
        base          >= 4.17 && < 5,
        text          >= 2.0,
        containers    >= 0.6

executable lab-monitor
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base,
        text,
        lab-monitor

test-suite lab-monitor-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:
        ExampleTraces
      , CompositionProps
      , AbsorbingProps
    build-depends:
        base,
        text,
        containers,
        directory,
        filepath,
        tasty            >= 1.4,
        tasty-hunit      >= 0.10,
        tasty-quickcheck >= 0.10,
        QuickCheck       >= 2.14,
        lab-monitor
